[project]
name = "modern-python"
version = "0.1.0"
description = ""
authors = [
    {name = "Miguel Villa Floran",email = "miguel.villafloran@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "paramiko (>=3.5.0,<4.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "black (>=24.10.0,<25.0.0)",
    "isort (>=5.13.2,<6.0.0)",
    "autoflake (>=2.3.1,<3.0.0)",
    "pyupgrade (>=3.19.1,<4.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
